# neuralnet_test

./: CMakeLists.txt  genann.cpp  ntest.cpp  tictoe.cpp  tk_evalgame.cpp  tk_evalgame.h  tk_game_tictoe.cpp  tk_game_ui.cpp  tk_game_ui.h
